default/speedtest/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: speedtest
spec:
  selector:
    app: speedtest
  ports:
    - port: 80
      name: http
      targetPort: http
