default/speedtest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: default
spec:
  rules:
    - host: "speedtest.tristan.moe"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: speedtest
                port:
                  name: http
  tls:
    - hosts:
        - "speedtest.tristan.moe"
      secretName: wildcard-tristan-moe
